--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.9.0
+  cloud_firestore: ^4.5.1
+  file_picker: ^5.2.9
+  firebase_auth: ^4.4.1
+  image_picker: ^0.8.7+3
+  firebase_storage: ^11.1.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
