--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.7+3
   firebase_storage: ^11.1.0
   uuid: ^3.0.7
+  location_picker_flutter_map: ^1.1.0
 
 dev_dependencies:
   flutter_test:
