--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_storage: ^11.1.0
   uuid: ^3.0.7
   location_picker_flutter_map: ^1.1.0
+  provider: ^6.0.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
