--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   firebase_storage: ^11.1.0
   uuid: ^3.0.7
   location_picker_flutter_map: ^1.1.0
+  http: ^0.13.5
+  flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.4.0
+  firebase_analytics: ^10.2.0
+  firebase_in_app_messaging: ^0.7.1
 
 dev_dependencies:
   flutter_test:
