--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.17.0
   url_launcher: ^6.1.10
+  flutter_launcher_icons: "^0.9.2"
 
 dev_dependencies:
   flutter_test:
@@ -104,3 +105,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/AlertUsLogo.png"
